# tree-sitter-messageformat

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-messageformat.pc.in
bindings/c/tree_sitter/: tree-sitter-messageformat.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_messageformat/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMessageFormatTests/: TreeSitterMessageFormatTests.swift
queries/: folds.scm  highlights.scm  injections.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt  complex.txt  edge_cases.txt  escaping.txt  nesting.txt  plural_select.txt  template.txt
