[package]
name = "tree-sitter-messageformat"
description = "messageformat parser"
version = "0.1.0"
authors = ["Danny Gleckle <daniel.gleckler@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "messageformat"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/bearfriend/tree-sitter-messageformat"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
